# public-school-duckdb

./: .env.example  .gitignore  PIPELINE.md  README.md  pyproject.toml  test.py
data/: sgg_code.ipynb
docs/: DATA_SOURCES.md  README.md  ROADMAP.md  시도시군구코드.md  초중등교육통계.md
scripts/: csv_to_parquet.py  unzip_data.py  zip_to_csv.py
src/schooldata/: __init__.py  api_client.py  cli.py  codes.py  config.py  db.py  loader.py  preprocess.py
